--- a/style.css
+++ b/style.css
@@ -4,14 +4,20 @@
 #top{
   text-align: center;
 }
-#center{
+#myPic{
+  width: 200px;
+  height: 200px;
+}
+#intro{
   text-align: center;
 }
 .Cicero {
   float: right;
+  width: 300px;
+  height: 300px;
   font-family: Impact;
   font-size: 16px;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 20px;
   border: 3px solid #000;
 }
